Stop scroll arrows from overlapping with other elements

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -11,7 +11,6 @@ body {
 }
 
 section {
-  position: relative;
   min-height: 100vh;
   width: 100vw;
 
