--- a/src/scss/ScrollArrow.scss
+++ b/src/scss/ScrollArrow.scss
@@ -1,5 +1,3 @@
 .scrollArrow {
-  position: absolute;
-  text-align: left;
-  bottom: 3%;
+  padding-top: 40px;
 }
